--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ a{
 }
 
 nav a:hover{
-    color: #e5fc03;
+    color: #555555;
     text-decoration: underline;
     text-underline-offset: .8rem;
 }
@@ -283,7 +283,9 @@ img{
     text-align: center;
 }
 #abt-img{
-    box-shadow: 0 0 3rem greenyellow;
+    box-shadow: 0 0 3rem rebeccapurple;
+    /* height: 20vh;
+    width: 99%; */
 }
 
 #abt-bgd{
@@ -359,6 +361,10 @@ img{
     height: 100vh;
     width: 100%;
 }
+
+#one{
+    padding: 4rem;
+}
   
 .proj-cont-holder{
     display: flex;
@@ -388,12 +394,12 @@ img{
 }
 
 .proj{
-    display: flex;
+    display: block;
     flex-direction: column;
     background-color: greenyellow;
     width: 35%;
     border-radius: 4rem;
-    padding: 2rem;
+    padding: 3rem;
 }
   
 .proj:hover{
@@ -401,7 +407,7 @@ img{
 }
   
 span{
-    color: greenyellow;
+    color: rebeccapurple;
 }
 
 
